--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "namaste-react",
+  "name": "khulja-sim-sim",
   "version": "1.0.0",
-  "description": "This is Namaste React",
+  "description": "This is khulja Sim Sim",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -25,8 +25,10 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
   "browserslist": [
